# LumiereVersailles

./: .env.example  .gitignore  README_HACKATHON.md  README_MULTI_AGENT.md  Readme.md  ask.py  fill_db.py  main.py  monitor_research.py  parse_jsonl.py  pyproject.toml  requirements.txt  start_backend.py  start_frontend.py  test_mistral_setup.py  versailles_research_20250929_155316.jsonl  versailles_research_agent.py  versailles_search.py  versailles_search_tool.py
.claude/agents/: versailles-visit-advisor.md
agents/: README.md  __init__.py
agents/config/: settings.py
agents/core/: __init__.py  agent.py  graph.py  simple_agent.py  state.py
agents/prompts/: README_MODES.md  (+9 more)
backend/: main.py
clients/: simple_client.py  stdio_client.py
data/: versailles_concentrated_clean.jsonl
docs/: RAG_SYSTEM_ARCHITECTURE.md  WEB_SEARCH_SETUP.md  docling-pipeline-options.md
extract_pdf/: extract_with_docling.py  extract_with_docling_single.py  requirements.txt
frontend/: .env.example  CONFIG.md  index.html  package-lock.json  package.json
itinerary_agent/: pyproject.toml  requirements.txt
itinerary_agent/langgraph_agent/: main.py  tools.py
itinerary_agent/simple_agent/: data.py  datamodels.py  main.py  tools.py
mcp_servers/: __init__.py  test_server.py  versailles_agent_server.py  versailles_weather_server.py
plans/: description.md  tools.md
rag/: .env.example  README.md  requirements.txt  test_embedding.py
scripts/: __init__.py  static_map_generator.py  travel_time.py  versailles_weather.py
tests/: test_agent.py  test_mcp_agent.py  test_openai_agent.py
(+204 files in other folders)
